prevented wrap on entry title, preventing entry-head from growing in height

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -152,6 +152,10 @@ form label{
 
 .entry-head h3{
     font-weight: 400;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 100%; 
 }
 
 
